@@ -1,2 +1,2 @@
-// 1.20.4	2024-02-23T17:05:16.3925765	Languages: en_us for mod: chilibulletweapons
-c2e18aa807da03c855af015010a3b5b5c1c9008b assets/chilibulletweapons/lang/en_us.json
+// 1.20.4	2024-03-15T21:04:29.0393465	Languages: en_us for mod: chilibulletweapons
+98f99d7c4e61a9fc6e83d84d428bc365f6f33666 assets/chilibulletweapons/lang/en_us.json
