@@ -1,4 +1,4 @@
-// 1.20.4	2024-02-23T17:05:16.3905779	Recipes
+// 1.20.4	2024-03-15T21:04:29.032351	Recipes
 31e2012cd2f6243ed1b395fbe930537f4309d559 data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun.json
 6f4c60c315bf575e4ab2be1d21b859d9588f2034 data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun_upgrading.json
 0fb3b8eee1d7bfc5848a1bdcfddb701f8f6eba1c data/chilibulletweapons/advancements/recipes/combat/chili_bullet.json
@@ -12,15 +12,23 @@ f0f9df2fcd2b48084e215f4410070e0da08fdbca data/chilibulletweapons/advancements/re
 e3091314e62dfaf4b0e8b4b84397c0a2ee0d0bc7 data/chilibulletweapons/advancements/recipes/food/half_chili_fish_sandwich.json
 af3386fa90a6cd06b757cc88ee8aedc3b8c7e940 data/chilibulletweapons/advancements/recipes/food/half_chili_meat_sandwich.json
 51bbb5f3dbe8f3b90107178bb1c77689924c221c data/chilibulletweapons/advancements/recipes/food/half_chili_potato_sandwich.json
+cc1e96c38e505439f2bd102f85399e075348735d data/chilibulletweapons/advancements/recipes/misc/bullet_chili_from_sack.json
+ca860f75d6960e698eaeae5e7ef1671269065b3c data/chilibulletweapons/advancements/recipes/misc/bullet_chili_sack.json
 a6894690c01d953a9210b09021942a22c50259ea data/chilibulletweapons/advancements/recipes/misc/chili_seeds.json
+2baa559c7c772ce409728bfa3f29eb03c3fcdf36 data/chilibulletweapons/advancements/recipes/misc/curved_chili_from_sack.json
+2f2f7eb70968cde98a07f062b50ed795978b3531 data/chilibulletweapons/advancements/recipes/misc/curved_chili_sack.json
 66122f0136e1a4144fd06d078d817860808ff3d2 data/chilibulletweapons/recipes/bayoneted_gun.json
 effeb35e01257e8c2751582cd9e40a2fce7b05db data/chilibulletweapons/recipes/bayoneted_gun_upgrading.json
+60dbca9953956dbf28cd3b6c59b4e37a30c4f693 data/chilibulletweapons/recipes/bullet_chili_from_sack.json
+e19ef318c7afda5e73564e56f5d9baeb8153539e data/chilibulletweapons/recipes/bullet_chili_sack.json
 f51652659b03401db01b010acc39813e271175fe data/chilibulletweapons/recipes/chili_bullet.json
 cd9b01a373142bf2a6b654911c71ea3abcdd1e7f data/chilibulletweapons/recipes/chili_chicken_sandwich.json
 49ea7c5ce4ad8b0a4253e954e6fef16fa921575c data/chilibulletweapons/recipes/chili_fish_sandwich.json
 e5cbfecefcfb9539a4a2963e548d8aff4c4ecc66 data/chilibulletweapons/recipes/chili_meat_sandwich.json
 ca19e426945362dd42170edd4aaa64be8606f966 data/chilibulletweapons/recipes/chili_potato_sandwich.json
 1b2a3529775774f400cdcb4d766218ac8f646c57 data/chilibulletweapons/recipes/chili_seeds.json
+85ef522782e89175989765eacb12ccf4fc466df9 data/chilibulletweapons/recipes/curved_chili_from_sack.json
+e454a8470a0a1c98c43efc765eba9be8b61a44e8 data/chilibulletweapons/recipes/curved_chili_sack.json
 5773a14b66239f73389ed4622fa6ab4bf02e08d4 data/chilibulletweapons/recipes/fried_chili_pepper.json
 ebf822443a825697356f491cf7f34004b7594a42 data/chilibulletweapons/recipes/gun.json
 835879ec7dea1617d89ed60ee7774e29831c1283 data/chilibulletweapons/recipes/half_chili_chicken_sandwich.json
