@@ -1,6 +1,7 @@
-// 1.20.4	2024-02-23T17:05:16.3855802	Item Models: chilibulletweapons
+// 1.20.4	2024-03-15T21:04:29.0213583	Item Models: chilibulletweapons
 a3f34e7c906ece5045655eaf4982e13d29ab32b3 assets/chilibulletweapons/models/item/bayoneted_gun.json
 04beba56d579567ec03732bb1a44732542ba09f7 assets/chilibulletweapons/models/item/bullet_chili.json
+586781a63776d5dcdfea55f65c041b2727a0dc06 assets/chilibulletweapons/models/item/bullet_chili_sack.json
 c72ccf8655f70e093a1217bb47c35588780cf82c assets/chilibulletweapons/models/item/chili_bullet.json
 b724cefcebcb7185e4d09939652fe462c4015789 assets/chilibulletweapons/models/item/chili_chicken_sandwich.json
 dd708ff85365092d0f62710d37d6b43ef08f0ae9 assets/chilibulletweapons/models/item/chili_fish_sandwich.json
@@ -8,6 +9,7 @@ dd708ff85365092d0f62710d37d6b43ef08f0ae9 assets/chilibulletweapons/models/item/c
 07f8f253b3ee6fecfbdf4611521d21e09286d080 assets/chilibulletweapons/models/item/chili_potato_sandwich.json
 39e01a1aefb4267141f1d6af8e17bd92d680705d assets/chilibulletweapons/models/item/chili_seeds.json
 df6e2ea95e54156cd93e1d38731be6850bf42277 assets/chilibulletweapons/models/item/curved_chili.json
+c9c82115e39f331273a69db6569c538485fb82d8 assets/chilibulletweapons/models/item/curved_chili_sack.json
 2e8244edfe1f0c642773f8f3ab743daa7f34017e assets/chilibulletweapons/models/item/fried_chili_pepper.json
 cb882a55a0453e98d2e62701004960e8bc5b7c4f assets/chilibulletweapons/models/item/gun.json
 92a49cdb3f5bd480dc794c577e25fd79a0e0382d assets/chilibulletweapons/models/item/half_chili_chicken_sandwich.json
