@@ -1,0 +1,6 @@
+{
+  "parent": "minecraft:item/generated",
+  "textures": {
+    "layer0": "chilibulletweapons:item/bullet_chili_sack"
+  }
+}
