@@ -1,0 +1,34 @@
+{
+  "parent": "minecraft:recipes/root",
+  "criteria": {
+    "has_bullet_chili": {
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "chilibulletweapons:bullet_chili"
+            ]
+          }
+        ]
+      },
+      "trigger": "minecraft:inventory_changed"
+    },
+    "has_the_recipe": {
+      "conditions": {
+        "recipe": "chilibulletweapons:bullet_chili_sack"
+      },
+      "trigger": "minecraft:recipe_unlocked"
+    }
+  },
+  "requirements": [
+    [
+      "has_the_recipe",
+      "has_bullet_chili"
+    ]
+  ],
+  "rewards": {
+    "recipes": [
+      "chilibulletweapons:bullet_chili_sack"
+    ]
+  }
+}
